--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
+# travis-ci configuration
 language: python
 python:
   - "2.6"
 install:
+  - pip install -r requirements.txt --use-mirrors
   - pip install coverage flake8 --use-mirrors
 script:
   - nosetests --with-coverage
